--- a/004 - CRUD cadastro/package.json
+++ b/004 - CRUD cadastro/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.3"
   }
 }
